Array stage 3, Family A: freeze SignatureConstant type storage
SignatureConstant's param/return storage becomes FrozenArray<TypeConstant>:
getRawParams()/getRawReturns() (and the MethodConstant delegates) return the
frozen wrapper instead of the interned raw arrays that 128 consumer sites
handled under scattered clone conventions. getReturns() no longer returns a
live Arrays.asList view of interned storage - a set()-writable window into a
constant shared by every container, red on master - both List accessors are
immutable snapshots now. A new signature constructor and pool overload share
frozen wrappers between constants, turning the old raw-array aliasing
(MethodConstant building one signature from another's types) into provably
safe structure sharing.

Hot internals keep zero-copy access through private unsafeArray() helpers;
consumers across 33 files converted mechanically, with array-typed
extractions marked by the greppable .unsafeArray() escape hatch for a future
tightening census. The remaining cross-constant escape
(ensureTupleType(returns)) closes with Family B.

SignatureConstantTest.signatureTypeStorageIsFrozen red-verified against the
live-view shape. Both gates green; full 22-module same-JVM sweep green.
Ledger row 60; audit doc stage-3 progress section.